migrate from array to list in Rolap hierarchies, levels, dimensions code review Signed-off-by: dbulahov <bulahovdenis@gmail.com>